--- a/servcios.html
+++ b/servcios.html
@@ -17,7 +17,7 @@
       <header>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt=""></a>
+          <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,7 +27,7 @@
                 <a class="nav-link fw-bold" aria-current="page" href="./index.html">Inicio</a>
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link fw-bold" href="servicios.html">Servicios</a>
+                <a class="nav-link fw-bold" href="./servcios.html">Servicios</a>
               </li>
               <li class="nav-item mx-2">
                 <a class="nav-link fw-bold" href="proyectos.html">Proyectos</a>
