--- a/servcios.html
+++ b/servcios.html
@@ -70,7 +70,7 @@
                     <p class="serviciosCard_subTitleTop text-center">Desde</p>
                     <h2 class="serviciosCard_title text-center" >$35.000</h2>
                     <h4 class="serviciosCard_subTitle text-center mt-3 mb-4">¿Qué incluye?</h4>
-                    <ul class="">
+                    <ul class="lista_servicios">
                     <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
                     <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
                     <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
@@ -90,14 +90,14 @@
                         <p class="serviciosCard_subTitleTop text-center">Desde</p>
                         <h2 class="serviciosCard_title text-center" >$35.000</h2>
                         <h4 class="serviciosCard_subTitle text-center mt-3 mb-4">¿Qué incluye?</h4>
-                        <ul>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
+                        <ul class="lista_servicios">
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
                         </ul>
                         <a class="serviciosCard_button text-center" href="">Consultar</a>
                         </div>
@@ -110,14 +110,14 @@
                         <p class="serviciosCard_subTitleTop text-center">Desde</p>
                         <h2 class="serviciosCard_title text-center" >$35.000</h2>
                         <h4 class="serviciosCard_subTitle text-center mt-3 mb-4">¿Qué incluye?</h4>
-                        <ul>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
+                        <ul class="lista_servicios">
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
                         </ul>
                         <a class="serviciosCard_button text-center" href="">Consultar</a>
                         </div>
@@ -130,14 +130,14 @@
                     <p class="serviciosCard_subTitleTop text-center">Desde</p>
                     <h2 class="serviciosCard_title text-center" >$35.000</h2>
                     <h4 class="serviciosCard_subTitle text-center mt-3 mb-4">¿Qué incluye?</h4>
-                    <ul>
-                    <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                    <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                    <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                    <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                    <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                    <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                    <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
+                    <ul class="lista_servicios">
+                    <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                    <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                    <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                    <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                    <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                    <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                    <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
                     </ul>
                     <a class="serviciosCard_button text-center" href="">Consultar</a>
                     </div>
@@ -150,14 +150,14 @@
                         <p class="serviciosCard_subTitleTop text-center">Desde</p>
                         <h2 class="serviciosCard_title text-center" >$35.000</h2>
                         <h4 class="serviciosCard_subTitle text-center mt-3 mb-4">¿Qué incluye?</h4>
-                        <ul>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
+                        <ul class="lista_servicios">
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
                         </ul>
                         <a class="serviciosCard_button text-center" href="">Consultar</a>
                         </div>
@@ -170,14 +170,14 @@
                         <p class="serviciosCard_subTitleTop text-center">Desde</p>
                         <h2 class="serviciosCard_title text-center" >$35.000</h2>
                         <h4 class="serviciosCard_subTitle text-center mt-3 mb-4">¿Qué incluye?</h4>
-                        <ul>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
-                        <li class="serviciosCard_info text-center">Lorem ipsum dolor sit amet,</li>
+                        <ul class="lista_servicios">
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
+                        <li class="serviciosCard_info">Lorem ipsum dolor sit amet,</li>
                         </ul>
                         <a class="serviciosCard_button text-center" href="">Consultar</a>
                         </div>
@@ -199,7 +199,7 @@
                 </p>
             </div>
     
-            <div class="search d-flex justify-content-end">
+            <div class="search">
                 <input type="email" placeholder="Ej: Mariana.ardissone7@gmail.com">
             <button class="email" type="submit"><svg width="30" height="25" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8.91196 9.9998H2.99996L1.02296 2.1348C1.0103 2.0891 1.00259 2.04216 0.999959 1.9948C0.977959 1.2738 1.77196 0.773804 2.45996 1.1038L21 9.9998L2.45996 18.8958C1.77996 19.2228 0.995959 18.7368 0.999959 18.0288C1.00198 17.9655 1.0131 17.9029 1.03296 17.8428L2.49996 12.9998" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
