--- a/proyectos.html
+++ b/proyectos.html
@@ -70,7 +70,7 @@
       </div>
       <h4 class="serviciosCard_subTitle text-center mt-3 mb-4">CIANTINI</h4>
      
-      <a class="serviciosCard_button text-center" href="">Más info</a>
+      <a class="serviciosCard_button text-center" href="./cemento.html">Más info</a>
   </div>
    </div>
    <div class="card_proyectos">
