--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <section class="antesDelNav">
-      <div class="imgAntesDelNav"> <img src="./assets/img/logo.png" alt=""></div>
+      <div class="imgAntesDelNav">
+         <img src="./assets/img/logo.png" alt="">
+        </div>
      
       <div class="gridCenter">
       <h1>Generamos contenidos,  
@@ -44,9 +46,6 @@
                 <a class="nav-link fw-bold" href="cemento.html">Cemento</a>
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link fw-bold" href="fqa.html">Preguntas Frecuentes</a>
-              </li>
-              <li class="nav-item mx-2">
                 <a class="nav-link fw-bold" href="contacto.html">Contacto</a>
               </li>
             </ul>
@@ -73,7 +72,7 @@
 
   <h2 class="section_title text-center">Sobre Nosotros</h2>
 
-  <div class="grid">
+  <div class="grid contenedorFlexColumn">
 
     <div class="wrapper_right">
       <img class="img.fluid" src="./assets/img/nosotros.jpeg" alt="imagen del equipo">
@@ -177,12 +176,11 @@
                 <div>
                     <h2 class="footer_item_title">Links</h2>
                 <ul class="footer_link">
-                    <li class="footer_links"><a href="">Inicio</a></li>
-                    <li class="footer_links"><a href="">Servicios</a></li>
-                    <li class="footer_links"><a href="">Proyectos</a></li>
-                    <li class="footer_links"><a href="">Proyectos</a></li>
-                    <li class="footer_links"><a href="">Preguntas frecuentes</a></li>
-                    <li class="footer_links"><a href="">Contacto</a></li>
+                    <li class="footer_links"><a href="./index.html">Inicio</a></li>
+                    <li class="footer_links"><a href="./servcios.html">Servicios</a></li>
+                    <li class="footer_links"><a href="./proyectos.html">Portfolio</a></li>
+                    <li class="footer_links"><a href="./cemento.html">Cemento</a></li>
+                    <li class="footer_links"><a href="./contacto.html">Contacto</a></li>
                 </ul>
                
                 </div>
