--- a/contacto.html
+++ b/contacto.html
@@ -101,13 +101,14 @@
                  <input type="number" name="telefono" placeholder="Celular" required>
             </div>
           </div>
+          <p>¿Qué tipo de servicio necesitas? (podés seleccionar mas de uno)</p>
 
           <div class="contactoInput formCheck"> 
             <label for="mensaje"></label>
-            <input type="checkbox" name="pelicula" value="">
-            <input type="checkbox" name="videoClip" value="">
-            <input type="checkbox" name="liveStreaming" value="">
-            <input type="checkbox" name="spot" value="">
+            <input type="checkbox" name="pelicula" value=""><label for="pelicula">Película</label>
+            <input type="checkbox" name="videoClip" value=""><label for="videoClip">VideoClip</label>
+            <input type="checkbox" name="liveStreaming" value=""><label for="liveStreaming">LiveStreaming</label>
+            <input type="checkbox" name="spot" value=""><label for="spot">Spot</label>
 
         </div>
             
