--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <footer>
 
-      <div class="footer_first section_newsleter">
+      <div class="footer_first">
         <div class="newsletter p-2">
             <div class="text">
                 <p class="text_para">Suscribite al newsletter para obtener promos exclusivas
@@ -145,7 +145,7 @@
             </div>
     
             <div class="search_1">
-                <p>Email</p>
+                <p class="paraEmail">Email</p>
                 <div class="search">
                   <input type="email" placeholder="Ej: Mariana.ardissone7@gmail.com">
             <button class="email" type="submit"><svg width="30" height="25" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
