--- a/proyectos.html
+++ b/proyectos.html
@@ -64,7 +64,7 @@
    
     </div>
       <div> 
-        <a class="proyectosCard_button text-center" href="./cemento.html">Más info</a>
+        <a class="proyectosCard_button text-center" href="./cementoDetalles1.html">Más info</a>
       </div>     
  
    </div>
@@ -77,7 +77,7 @@
       <h4 class="text-center mt-3">Pelicula de Sebastian Battaglia</h4>
     </div>
       <div>
-       <a class="proyectosCard_button text-center" href="./cemento.html">Más info</a>
+       <a class="proyectosCard_button text-center" href="./cementoDetalle2.html">Más info</a>
      </div>
      
   
@@ -409,10 +409,9 @@
       </section>
 
   </main>  
-
   <footer>
 
-    <div class="footer_first section_newsleter">
+    <div class="footer_first">
       <div class="newsletter p-2">
           <div class="text">
               <p class="text_para">Suscribite al newsletter para obtener promos exclusivas
@@ -420,7 +419,7 @@
           </div>
   
           <div class="search_1">
-              <p>Email</p>
+              <p class="paraEmail">Email</p>
               <div class="search">
                 <input type="email" placeholder="Ej: Mariana.ardissone7@gmail.com">
           <button class="email" type="submit"><svg width="30" height="25" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
