--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <section class="home">
 
-        <img class="img.fluid" src="./assets/img/home.jpg" alt="Imagen de la home">
+        <img class="img.fluid" src="./assets/img/home1.jpg" alt="Imagen de la home">
 
       </section>
 
