--- a/cementoDetalle2.html
+++ b/cementoDetalle2.html
@@ -76,7 +76,7 @@
                 <h2 class="section_title text-center">Video Proyecto X</h2>
 
                 <div class="videoResponsive">
-                  <iframe width="1120" height="630" src="https://www.youtube.com/embed/FaRGbIh-wgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/FaRGbIh-wgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 </section>
 
