--- a/cemento.html
+++ b/cemento.html
@@ -95,7 +95,7 @@
 
               <section class="section video">
                 <div class="videoResponsive">
-                <iframe width="1120" height="630" src="https://www.youtube.com/embed/FaRGbIh-wgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/FaRGbIh-wgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               </section>
 
