--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <!-- Hero section -->
 
       <section class="home">
-
-        <img class="img.fluid" src="./assets/img/home1.jpg" alt="Imagen de la home">
-
+        <div class="gridCenter">
+        <img src="./assets/img/home1.jpg" alt="Imagen de la home">
+      </div>
       </section>
 
 
