--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
 
     <main>
 
-        <section class="section contacto">
+        <section class="contacto">
 
             <h2 class="section_title text-center">Contacto</h2>
 <div class="contactoBox">
