--- a/proyectos.html
+++ b/proyectos.html
@@ -47,11 +47,11 @@
 
   <main>
 
-    <section class="section proyectos">
+    <section class="proyectos">
 
       <h2 class="section_title text-center">Trabajos realizados</h2>
 
-      <div class="section grid_proyectos">
+      <div class="grid_proyectos">
 
    <div class="card_proyectos text-center">
    
