--- a/servcios.html
+++ b/servcios.html
@@ -45,7 +45,7 @@
       </header>
 
     <main>
-        <section class="section nuestros_servicios">
+        <section class="nuestros_servicios">
 
             <h2 class="section_title text-center">Nuestos Servcios</h2>
 
